d1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nodered1
  name: nodered1
  namespace: cws-spot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodered1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nodered1
    spec:
      containers:
        - image: calixtocws/cwsspot-nr1
          imagePullPolicy: Always
          name: nodered1
          ports:
            - containerPort: 1880
              name: node-red
          resources: {}
      nodeSelector:
        alpha.eksctl.io/nodegroup-name: cws-group-private
