service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-nodered1
spec:
  selector:
    app: nodered1
  ports:
  - name: hostport
    port: 1880
    targetPort: 1880
  type: LoadBalancer
