service_loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodered1
spec:
  selector:
    app: nodered1
  ports:
  - name: node-red
    port: 1880
    targetPort: 1880
  type: LoadBalancer
