ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/redirect-entry-point: https
  generation: 3
  name: nodered1
  namespace: default
spec:
  rules:
    - host: node-red.yourdomain.tld
      http:
        paths:
          - path: /
            backend:
              serviceName: nodered1
              servicePort: 1880
  tls:
    - hosts:
        - node-red.yourdomain.tld
      secretName: node-red-cert
